# resender

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
notebooks/: hello_world.ipynb
src/resender/apps/: hello_world.py  karpathy_daily_quote.py  weekly_email.py
src/resender/emails/: __init__.py  sender.py
tests/: test_karpathy_app.py  test_sender.py  test_smoke.py
